[package]
name = "unicode-explorer"
version = "0.1.0"
edition = "2021"
authors = ["Mike"]
description = "A zoomable Unicode character explorer"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "MouseEvent",
    "WheelEvent",
    "KeyboardEvent",
    "TextMetrics",
] }
unicode_names2 = "1.3"
unic-ucd-category = "0.9"
unic-ucd-block = "0.9"

[profile.release]
opt-level = "s"
lto = true
